--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Three.JS Tutorial: First Person Cameras</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="base.css">
-</head>
-<body>
-  <script src="./main.js" type="module">
-  </script>
-</body>
+  <head>
+    <title>Three.JS Tutorial: First Person Cameras</title>
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link rel="stylesheet" type="text/css" href="base.css" />
+  </head>
+  <body>
+    <script src="./three.js"></script>
+    <script type="module" src="./GLTFLoader.js"></script>
+    <script src="./main.js" type="module"></script>
+    
+
+    
+
+    </script>
+  </body>
 </html>
